--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
     "prisma": "^5.22.0",
     "tsx": "^4.19.2",
@@ -32,6 +33,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "http-status": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.23.8"
   }
