--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "ts-node-dev": "^2.0.0",
+    "uuid": "^11.0.3",
+    "uuidv4": "^6.2.13",
     "zod": "^3.23.8"
   }
 }
