some code added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "library_management_system_api",
+  "name": "E-commers-project",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
