--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "prod": "NODE_ENV=production node ./dist/server.js",
-    "build": "tsc & prisma generate",
+    "build": "tsc ",
     "vercel-build": "echo hello",
     "postinstall": "prisma generate"
   },
